doc : add introduction about event

--- a/index.html
+++ b/index.html
@@ -32,7 +32,34 @@
         </div>
         <div class="form-contaier">
             <div class="div-left">
-                
+                <h1>Warning: Previous Party Recap</h1>
+                <p>Listen up, you floating troublemakers! Last year’s Ghost Party was so INSANE, it literally broke
+                    three dimensions and scared two demons into early retirement. 😱</p>
+                <ol>
+                    <li>
+                        💀 Casper got so drunk that he accidentally possessed a blender. That poor thing has been making
+                        haunted smoothies ever since. If your blender suddenly starts making weird noises at 3 AM… yeah,
+                        that’s him. 🌀👻
+                    </li>
+                    <li>
+                        The Headless Horseman tried karaoke… but we had to disqualify him because his mic kept falling
+                        through his neck hole.
+                    </li>
+                    <li>
+                        🧛 A vampire tried flirting with a zombie. The zombie just groaned, “Uhhhggghhh brains…” and the
+                        vampire, feeling deeply insulted, replied, “Well, that’s rude.” 🧛‍♂️💔🧟
+                    </li>
+                    <li>
+                        A ghost mistook a blender for a new form of teleportation. He has been spinning at 10,000
+                        RPM ever since. We call him “Ghost Smoothie” now. 🌀👻
+                    </li>
+                </ol>
+                <p>🔥 This year, we are PREPARED for MAXIMUM CHAOS. So sign up NOW, or you’ll miss out on the
+                    biggest, most ridiculous supernatural rager of all time!
+
+                    P.S. If you hear whispering behind you while signing up… just ignore it. That’s Gary. He
+                    died while filling out a form in 1842 and refuses to leave. Don’t be like Gary. FINISH YOUR SIGNUP.
+                </p>
             </div>
             <div class="div-right">
                 <form action="" method="">
@@ -44,9 +71,16 @@
                     </div>
                     <div>
                         <label for="user-email">Email:</label>
-                        <input type="email" id="user-email" name="user-email" placeholder="why.am.i.dead@ghostmail.com" required>
+                        <input type="email" id="user-email" name="user-email" placeholder="why.am.i.dead@ghostmail.com"
+                            required>
                         <label for="tel">Number</label>
                         <input type="tel" id="tel" name="user-number" placeholder="xxx-xxx-1313" required>
+                    </div>
+                    <div>
+                        <label for="password">Password:</label>
+                        <input type="password" id="password" name="user-password" required>
+                        <label for="confirm-pass">Confirm Password:</label>
+                        <input type="password" id="confirm-pass" name="confirm-pass" required>
                     </div>
                     <div>
                         <label for="ghost-type">Type of Ghost</label>
