style(header): style header logo and links

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <header id="header">
-        <div class="icon-name"><img src="./resources/images/ghost-icon.png" alt="ghost-icon" id="ghost-icon">
-            GhostGathering</div>
+        <div class="icon-name"><img src="./resources/images/skeleton-head.png" alt="ghost-icon" id="ghost-icon">
+            Ghost Gathering <span>2025</span></div>
         <ul>
             <li>🏚️ Haunted Home List</li>
             <li>🎃 Spooky Schedule</li>
