style(form): set up fonts and colors to font controls

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             </h1>
             <p>Thousands of ghosts, ghouls, and undead legends raving under a blood moon 🌕, sipping ectoplasm cocktails
                 🍹, breakdancing in mid-air 🕺, and telling horror stories so scary that even Wi-Fi signals run away.
-                📡💀</p>
+                📡💀 Sign up form below to join the party.</p>
 
         </div>
-        <div class="form-contaier">
+        <div class="form-container">
             <div class="div-left">
                 <h1>Warning: Previous Party Recap</h1>
                 <p>Listen up, you floating troublemakers! Last year’s Ghost Party was so INSANE, it literally broke
@@ -53,6 +53,10 @@
                         A ghost mistook a blender for a new form of teleportation. He has been spinning at 10,000
                         RPM ever since. We call him “Ghost Smoothie” now. 🌀👻
                     </li>
+                    <li>The Grim Reaper rage-quit beer pong after losing to a zombie with no arms. He has vowed revenge
+                        this year. 🏓💀</li>
+                    <li> A demon tried to host a “summon your worst fear” contest. A guy showed up holding an empty
+                        phone battery. The demons screamed and ran away. 📱🔋😱</li>
                 </ol>
                 <p>🔥 This year, we are PREPARED for MAXIMUM CHAOS. So sign up NOW, or you’ll miss out on the
                     biggest, most ridiculous supernatural rager of all time!
@@ -63,24 +67,37 @@
             </div>
             <div class="div-right">
                 <form action="" method="">
+                    <h1>"Sign up and become part of the undead VIP club!" 🪦</h1>
                     <div>
-                        <label for="user-name">Name:</label>
-                        <input type="text" id="user-name" name="user-name" placeholder="Casper" required>
-                        <label for="user-surname">Surname:</label>
-                        <input type="text" id="user-surname" name="user-surname" placeholder="McHaunty" required>
+                        <div>
+                            <label for="user-name">Name:</label>
+                            <input type="text" id="user-name" name="user-name" placeholder="Casper" required>
+                        </div>
+                        <div>
+                            <label for="user-surname">Surname:</label>
+                            <input type="text" id="user-surname" name="user-surname" placeholder="McHaunty" required>
+                        </div>
                     </div>
                     <div>
-                        <label for="user-email">Email:</label>
-                        <input type="email" id="user-email" name="user-email" placeholder="why.am.i.dead@ghostmail.com"
-                            required>
-                        <label for="tel">Number</label>
-                        <input type="tel" id="tel" name="user-number" placeholder="xxx-xxx-1313" required>
+                        <div>
+                            <label for="user-email">Email:</label>
+                            <input type="email" id="user-email" name="user-email" placeholder="why.am.i.dead@ghostmail.com"
+                                required>
+                        </div>
+                        <div>
+                            <label for="tel">Number</label>
+                            <input type="tel" id="tel" name="user-number" placeholder="xxx-xxx-1313" required>
+                        </div>
                     </div>
                     <div>
-                        <label for="password">Password:</label>
-                        <input type="password" id="password" name="user-password" required>
-                        <label for="confirm-pass">Confirm Password:</label>
-                        <input type="password" id="confirm-pass" name="confirm-pass" required>
+                        <div>
+                            <label for="password">Password:</label>
+                            <input type="password" id="password" name="user-password" required>
+                        </div>
+                        <div>
+                            <label for="confirm-pass">Confirm Password:</label>
+                            <input type="password" id="confirm-pass" name="confirm-pass" required>
+                        </div>
                     </div>
                     <div>
                         <label for="ghost-type">Type of Ghost</label>
@@ -93,23 +110,24 @@
                     </div>
                     <fieldset>
                         <legend>Choose Your Favorite Costume</legend>
-                        <label for="white-sheet">Classic White Sheet 👻</label>
                         <input type="radio" id="white-sheet" name="fav-costume" value="white-sheet">
-                        <label for="victorian"> Victorian Ghost 🎩</label>
+                        <label for="white-sheet">Classic White Sheet 👻</label>
                         <input type="radio" id="victorian" name="fav-costume" value="victorian">
-                        <label for="shadowy"> Shadowy Figure 🌑</label>
+                        <label for="victorian"> Victorian Ghost 🎩</label>
                         <input type="radio" id="shadowy" name="fav-costume" value="shadowy">
-                        <label for="reaper">Skeletal Reaper 💀</label>
+                        <label for="shadowy"> Shadowy Figure 🌑</label>
                         <input type="radio" id="reaper" name="fav-costume" value="reaper">
+                        <label for="reaper">Skeletal Reaper 💀</label>
                     </fieldset>
-            </div>
-            <div>
-                <label for="fav-place">Favorite Haunting Spot🏚️</label>
-                <textarea name="fav-place" id="fav-place" placeholder="Ex. Graveyard Lane, Plot 666"></textarea>
-            </div>
-            <button type="submit">Summon Me to the Party!</button>
-            </form>
 
+                    <div>
+                        <label for="fav-place">Favorite Haunting Spot🏚️</label>
+                        <textarea name="fav-place" id="fav-place" placeholder="Ex. Graveyard Lane, Plot 666"></textarea>
+                    </div>
+                    <button type="submit">Summon Me to the Party!</button>
+                </form>
+
+            </div>
         </div>
     </div>
 
