feat(form): add * sign indicating required fields add * sign for required fields and use aria-label attribute in span to pronounce "required" while using screen reader

--- a/index.html
+++ b/index.html
@@ -70,32 +70,32 @@
                     <h1>"Sign up and become part of the undead VIP club!" 🪦</h1>
                     <div>
                         <div>
-                            <label for="user-name">Name:</label>
+                            <label for="user-name">Name<span aria-label="required">*</span></label>
                             <input type="text" id="user-name" name="user-name" placeholder="Casper" required>
                         </div>
                         <div>
-                            <label for="user-surname">Surname:</label>
-                            <input type="text" id="user-surname" name="user-surname" placeholder="McHaunty" required>
+                            <label for="user-surname">Surname</label>
+                            <input type="text" id="user-surname" name="user-surname" placeholder="McHaunty" >
                         </div>
                     </div>
                     <div>
                         <div>
-                            <label for="user-email">Email:</label>
+                            <label for="user-email">Email<span aria-label="required">*</span></label>
                             <input type="email" id="user-email" name="user-email" placeholder="why.am.i.dead@ghostmail.com"
                                 required>
                         </div>
                         <div>
                             <label for="tel">Number</label>
-                            <input type="tel" id="tel" name="user-number" placeholder="xxx-xxx-1313" required>
+                            <input type="tel" id="tel" name="user-number" placeholder="xxx-xxx-1313" >
                         </div>
                     </div>
                     <div>
                         <div>
-                            <label for="password">Password:</label>
+                            <label for="password">Password<span aria-label="required">*</span></label>
                             <input type="password" id="password" name="user-password" required>
                         </div>
                         <div>
-                            <label for="confirm-pass">Confirm Password:</label>
+                            <label for="confirm-pass">Confirm Password<span aria-label="required">*</span></label>
                             <input type="password" id="confirm-pass" name="confirm-pass" required>
                         </div>
                     </div>
@@ -132,7 +132,7 @@
     </div>
 
     <footer id="footer">
-
+        <a href="https://github.com/yashu483/sign-up-form"><img src="resources/images/github.png" alt="GitHub logo"></a>
     </footer>
 </body>
 
